update metadata impl